Added Manifest chnges.
Signed-off-by: Jonsy13 <vedant.shrotria@mayadata.io>

--- a/litmus-k8s/cluster-k8s-manifest.yml
+++ b/litmus-k8s/cluster-k8s-manifest.yml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
         - name: litmusportal-frontend
-          image: jonsy13/chaosimage:latest
+          image: litmuschaos/litmusportal-frontend:ci
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
